force-app/main/default/objects/Todo__c/Todo__c.object-meta.xml
<CustomObject>
    <label>Todo</label>
    <nameField>
        <label>Todo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Todos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>