force-app/main/default/objects/Todo__c/fields/Todo_Id__c.field-meta.xml
<CustomField>
    <fullName>Todo_Id__c</fullName>
    <displayFormat>TDI-{0000}</displayFormat>
    <label>Todo_Id</label>
    <type>AutoNumber</type>
</CustomField>